--- a/public/index.html
+++ b/public/index.html
@@ -8,27 +8,40 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>VT-Form</title>
   <link rel="stylesheet" href="./output.css">
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 
-<body class="flex h-screen w-full flex-col items-center bg-gradient-to-br from-slate-50 to-teal-600 p-5">
+<body class="flex w-full flex-col items-center min-h-screen p-8">
   <main
-    class="flex flex-col w-[calc(100%-20px)] h-[calc(100%-20px)] max-w-full items-center max-h-full rounded-xl bg-red-500 ">
-    <div class="m-4 flex items-center flex-col  w-full max-w-[900px]">
-      <div class="m-4 flex items-center flex-col bg-slate-50 w-full max-w-[900px]">
-        <span>Questions 1/3</span>
-        <h1>Hello</h1>
-      </div>
-    </div>
+    class="flex flex-col w-[calc(100%-20px)] max-w-full items-center rounded-xl bg-red-500 min-h-[calc(100vh*2/3)] relative">
+    <section class="text-white text-xl m-4 flex items-center flex-col px-8 w-full max-w-[900px]">
+      <p>Questions 1/3</p>
+      <h1>Je suis une question, ou pas ?</h1>
+    </section>
     <hr class="w-full bg-transparent">
-    <div class="m-4 flex items-center flex-col w-full max-w-[900px]">
-      <a href="#" class="m-4 flex items-center flex-col p-2 rounded-xl bg-slate-50 w-full max-w-[900px]">
-        <span>Questions 1/3</span>
-        <h1>Hello</h1>
-      </a>
-      <a href="#" class="m-4 flex items-center flex-col p-2 rounded-xl bg-slate-50 w-full max-w-[900px]">
-        <span>Questions 1/3</span>
-        <h1>Hello</h1>
-      </a>
+    <!-- Liste des liens -->
+    <nav x-data="{ selected: null }" class="flex px-8 m-4 flex-col items-center w-full max-w-3xl">
+      <ol class="w-full space-y-4">
+        <li>
+          <a href="#" @click.prevent="selected = 1" :class="selected === 1 ? 'selected' : ''"
+            class="link-item flex flex-col items-center w-full p-4 bg-slate-50 rounded-lg shadow transition-transform transform hover:scale-105 hover:shadow-lg hover:bg-slate-100">
+            <p class="text-sm font-medium text-gray-700">Questions 1/3</p>
+            <h1 class="text-xl font-bold text-gray-800">La réponse 01</h1>
+          </a>
+        </li>
+        <li>
+          <a href="#" @click.prevent="selected = 2" :class="selected === 2 ? 'selected' : ''"
+            class="link-item flex flex-col items-center w-full p-4 bg-slate-50 rounded-lg shadow transition-transform transform hover:scale-105 hover:shadow-lg hover:bg-slate-100">
+            <p class="text-sm font-medium text-gray-700">Questions 1/3</p>
+            <h1 class="text-xl font-bold text-gray-800">La réponse D</h1>
+          </a>
+        </li>
+      </ol>
+    </nav>
+    <div class="absolute bottom-2 right-4 flex gap-4 m-2">
+      <button
+        class="btn btn-primary m-2 p-4 w-100 h-100 text-white rounded-lg hover:border-white  bg-green-500 ">Suivant</button>
+      <button class="btn btn-primary m-2 p-4 w-100 h-100 text-white rounded-lg bg-blue-500 ">Valider</button>
     </div>
   </main>
 </body>
